 syntax = "proto3";

service DatabaseCall {
  rpc Login(LoginRequest) returns(LoginReply){}
}

message LoginRequest {
  string username = 1;
  string password = 2;
  optional string body = 3;
}

message LoginReply {
  bool correct = 1;
}
